Feature(Layout): Correct sections IDs

--- a/demo/css_components.html
+++ b/demo/css_components.html
@@ -108,7 +108,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/index.html#gettingStarted">
+                            <a href="/emag-apps-ui-kit/demo/index.html#getting-started">
                                 <span class="menu-text">Getting started</span>
                             </a>
                         </li>
@@ -131,22 +131,22 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#topNavigation">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#top-navigation">
                                 <span class="menu-text">Top Navigation</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#mainSidebar">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#main-sidebar">
                                 <span class="menu-text">Sidebar</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#mainFooter">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#main-footer">
                                 <span class="menu-text">Footer</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#gridLayout">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#grid-layout">
                                 <span class="menu-text">Grid Layout</span>
                             </a>
                         </li>
@@ -197,12 +197,12 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssTables">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-tables">
                                 <span class="menu-text">Tables</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#basicForms">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#basic-forms">
                                 <span class="menu-text">Forms</span>
                             </a>
                         </li>
@@ -212,42 +212,42 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssFlipswitch">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-flipswitch">
                                 <span class="menu-text">CSS Flipswitch</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssTooltips">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-tooltips">
                                 <span class="menu-text">CSS Tooltips</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssLabelsandBadges">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-labels-and-badges">
                                 <span class="menu-text">Labels and badges</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssAlertsandNotifications">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-alerts-and-notifications">
                                 <span class="menu-text">Alerts and notifications</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssProgressBars">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-progressbars">
                                 <span class="menu-text">Progress Bars</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssPanels">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-panels">
                                 <span class="menu-text">Panels</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssJumbotron">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-jumbotron">
                                 <span class="menu-text">Page headers and jumbotrons</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssEmbeds">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-embeds">
                                 <span class="menu-text">Embeds</span>
                             </a>
                         </li>
@@ -270,7 +270,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsBlockUI">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-block-ui">
                                 <span class="menu-text">Block UI</span>
                             </a>
                         </li>
@@ -327,7 +327,7 @@
                             </ul>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsCustomErrorMessages">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-error-messages">
                                 <span class="menu-text">Custom error messages</span>
                             </a>
                         </li>
@@ -362,17 +362,17 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsPopovers">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-popovers">
                                 <span class="menu-text">Popovers</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsTooltips">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-tooltips">
                                 <span class="menu-text">Tooltips</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsUtilities">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-utilities">
                                 <span class="menu-text">Utilities</span>
                             </a>
                         </li>
@@ -457,7 +457,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="typeStyles" class="pad-top-40">
+                        <section id="type-styles" class="pad-top-40">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Typefaces variations</strong></h4>
@@ -836,7 +836,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssTables" class="pad-top-20">
+                        <section id="css-tables" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Tables</strong></h4>
@@ -1157,7 +1157,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="basicForms" class="pad-top-20">
+                        <section id="basic-forms" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Forms</strong></h4>
@@ -1929,7 +1929,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssFlipswitch" class="pad-top-20">
+                        <section id="css-flipswitch" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>CSS Flipswitch</strong></h4>
@@ -1957,7 +1957,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssTooltips" class="pad-top-20">
+                        <section id="css-tooltips" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>CSS Tooltips</strong></h4>
@@ -2004,7 +2004,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssLabelsandBadges" class="pad-top-20">
+                        <section id="css-labels-and-badges" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Labels and badges</strong></h4>
@@ -2058,7 +2058,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssAlertsandNotifications" class="pad-top-20">
+                        <section id="css-alerts-and-notifications" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Alerts and notifications</strong></h4>
@@ -2133,7 +2133,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssProgressBars" class="pad-top-20">
+                        <section id="css-progressbars" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Progress Bars</strong></h4>
@@ -2186,7 +2186,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssPanels" class="pad-top-20">
+                        <section id="css-panels" class="pad-top-20">
 
                                     <div class="show-panel">
                                         <div class="show-panel-body">
@@ -2341,7 +2341,7 @@
                                         </div>
                                     </div>
                         </section>
-                        <section id="cssJumbotron" class="pad-top-20">
+                        <section id="css-jumbotron" class="pad-top-20">
                             <div class="show-panel-body">
                                 <h4 class="text-primary"><strong>Jumbotron</strong></h4>
                                 <p><strong>Default styling:</strong></p>
@@ -2355,7 +2355,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssJumbotron" class="pad-top-20">
+                        <section id="css-page-header" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Page header</strong></h4>
@@ -2369,7 +2369,7 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="cssEmbeds" class="pad-top-20">
+                        <section id="css-embeds" class="pad-top-20">
                             <div class="show-panel">
                                 <div class="show-panel-body">
                                     <h4 class="text-primary"><strong>Responsive embeds</strong></h4>
