--- a/demo/plugin_introjs.html
+++ b/demo/plugin_introjs.html
@@ -108,7 +108,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/index.html#gettingStarted">
+                            <a href="/emag-apps-ui-kit/demo/index.html#getting-started">
                                 <span class="menu-text">Getting started</span>
                             </a>
                         </li>
@@ -131,22 +131,22 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#topNavigation">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#top-navigation">
                                 <span class="menu-text">Top Navigation</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#mainSidebar">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#main-sidebar">
                                 <span class="menu-text">Sidebar</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#mainFooter">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#main-footer">
                                 <span class="menu-text">Footer</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#gridLayout">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#grid-layout">
                                 <span class="menu-text">Grid Layout</span>
                             </a>
                         </li>
@@ -197,12 +197,12 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssTables">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-tables">
                                 <span class="menu-text">Tables</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#basicForms">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#basic-forms">
                                 <span class="menu-text">Forms</span>
                             </a>
                         </li>
@@ -212,42 +212,42 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssFlipswitch">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-flipswitch">
                                 <span class="menu-text">CSS Flipswitch</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssTooltips">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-tooltips">
                                 <span class="menu-text">CSS Tooltips</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssLabelsandBadges">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-labels-and-badges">
                                 <span class="menu-text">Labels and badges</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssAlertsandNotifications">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-alerts-and-notifications">
                                 <span class="menu-text">Alerts and notifications</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssProgressBars">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-progressbars">
                                 <span class="menu-text">Progress Bars</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssPanels">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-panels">
                                 <span class="menu-text">Panels</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssJumbotron">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-jumbotron">
                                 <span class="menu-text">Page headers and jumbotrons</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssEmbeds">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-embeds">
                                 <span class="menu-text">Embeds</span>
                             </a>
                         </li>
@@ -270,7 +270,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsBlockUI">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-block-ui">
                                 <span class="menu-text">Block UI</span>
                             </a>
                         </li>
@@ -327,7 +327,7 @@
                             </ul>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsCustomErrorMessages">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-error-messages">
                                 <span class="menu-text">Custom error messages</span>
                             </a>
                         </li>
@@ -362,17 +362,17 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsPopovers">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-popovers">
                                 <span class="menu-text">Popovers</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsTooltips">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-tooltips">
                                 <span class="menu-text">Tooltips</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsUtilities">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-utilities">
                                 <span class="menu-text">Utilities</span>
                             </a>
                         </li>
@@ -448,20 +448,20 @@
                         <p><b>IntroJS</b></p>
                     </div>
                 </div>
-                <section id="summernoteStandard" class="pad-top-40">
+                <section class="pad-top-40">
                     <div class="show-panel">
                         <div class="show-panel-body">
                             <h4 class="text-primary"><strong>IntroJS</strong></h4>
 
                             <h2>Choose the tour type</h2>
 
-                            <button id="introJsDefault" type="button" class="btn btn-primary">Default</button>&nbsp;
-                            <button id="introJsWithoutBullets" type="button" class="btn btn-primary">Without bullets</button>&nbsp;
-                            <button id="introJsWithoutButtons" type="button" class="btn btn-primary">Without buttons</button>&nbsp;
-                            <button id="introJsWithProgressBar" type="button" class="btn btn-primary">With progress bar</button>&nbsp;
-                            <button id="introJsWithAutoPositioning" type="button" class="btn btn-primary">Auto Positioning</button>&nbsp;
-                            <button id="introJsHtmlInTooltip" type="button" class="btn btn-primary">HTML in tooltip</button>&nbsp;
-                            <button id="introJsHints" type="button" class="btn btn-primary">Hints</button>&nbsp;
+                            <button id="intro_js_default" type="button" class="btn btn-primary">Default</button>&nbsp;
+                            <button id="intro_js_without_bullets" type="button" class="btn btn-primary">Without bullets</button>&nbsp;
+                            <button id="intro_js_without_buttons" type="button" class="btn btn-primary">Without buttons</button>&nbsp;
+                            <button id="intro_js_with_progressbar" type="button" class="btn btn-primary">With progress bar</button>&nbsp;
+                            <button id="intro_js_with_auto_positioning" type="button" class="btn btn-primary">Auto Positioning</button>&nbsp;
+                            <button id="intro_js_html_in_tooltip" type="button" class="btn btn-primary">HTML in tooltip</button>&nbsp;
+                            <button id="intro_js_hints" type="button" class="btn btn-primary">Hints</button>&nbsp;
 
                             <hr>
 
@@ -673,41 +673,41 @@
 
             initStepData();
 
-            $body.on('click', '#introJsDefault', function () {
+            $body.on('click', '#intro_js_default', function () {
                 startIntroJs({
                     steps: window.defaultsIntroSteps
                 });
             });
 
-            $body.on('click', '#introJsWithoutBullets', function () {
+            $body.on('click', '#intro_js_without_bullets', function () {
                 startIntroJs({
                     showBullets: false,
                     steps: window.defaultsIntroSteps
                 });
             });
 
-            $body.on('click', '#introJsWithoutButtons', function () {
+            $body.on('click', '#intro_js_without_buttons', function () {
                 startIntroJs({
                     showButtons: false,
                     steps: window.defaultsIntroSteps
                 });
             });
 
-            $body.on('click', '#introJsWithProgressBar', function () {
+            $body.on('click', '#intro_js_with_progressbar', function () {
                 startIntroJs({
                     showProgress: true,
                     steps: window.defaultsIntroSteps
                 });
             });
 
-            $body.on('click', '#introJsWithAutoPositioning', function () {
+            $body.on('click', '#intro_js_with_auto_positioning', function () {
                 startIntroJs({
                     tooltipPosition: 'auto',
                     steps: window.autoPositioningIntroSteps
                 });
             });
 
-            $body.on('click', '#introJsHtmlInTooltip', function () {
+            $body.on('click', '#intro_js_html_in_tooltip', function () {
                 startIntroJs({
                     steps: window.introStepsWithHtml
                 })
