--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -113,7 +113,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/index.html#gettingStarted">
+                            <a href="/emag-apps-ui-kit/demo/index.html#getting-started">
                                 <span class="menu-text">Getting started</span>
                             </a>
                         </li>
@@ -136,22 +136,22 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#topNavigation">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#top-navigation">
                                 <span class="menu-text">Top Navigation</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#mainSidebar">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#main-sidebar">
                                 <span class="menu-text">Sidebar</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#mainFooter">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#main-footer">
                                 <span class="menu-text">Footer</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/layout.html#gridLayout">
+                            <a href="/emag-apps-ui-kit/demo/layout.html#grid-layout">
                                 <span class="menu-text">Grid Layout</span>
                             </a>
                         </li>
@@ -202,12 +202,12 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssTables">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-tables">
                                 <span class="menu-text">Tables</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#basicForms">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#basic-forms">
                                 <span class="menu-text">Forms</span>
                             </a>
                         </li>
@@ -217,42 +217,42 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssFlipswitch">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-flipswitch">
                                 <span class="menu-text">CSS Flipswitch</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssTooltips">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-tooltips">
                                 <span class="menu-text">CSS Tooltips</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssLabelsandBadges">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-labels-and-badges">
                                 <span class="menu-text">Labels and badges</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssAlertsandNotifications">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-alerts-and-notifications">
                                 <span class="menu-text">Alerts and notifications</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssProgressBars">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-progressbars">
                                 <span class="menu-text">Progress Bars</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssPanels">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-panels">
                                 <span class="menu-text">Panels</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssJumbotron">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-jumbotron">
                                 <span class="menu-text">Page headers and jumbotrons</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html#cssEmbeds">
+                            <a href="/emag-apps-ui-kit/demo/css_components.html#css-embeds">
                                 <span class="menu-text">Embeds</span>
                             </a>
                         </li>
@@ -275,7 +275,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsBlockUI">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-block-ui">
                                 <span class="menu-text">Block UI</span>
                             </a>
                         </li>
@@ -332,7 +332,7 @@
                             </ul>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsCustomErrorMessages">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-custom-error-messages">
                                 <span class="menu-text">Custom error messages</span>
                             </a>
                         </li>
@@ -367,17 +367,17 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsPopovers">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-popovers">
                                 <span class="menu-text">Popovers</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsTooltips">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-tooltips">
                                 <span class="menu-text">Tooltips</span>
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/js_components.html#jsUtilities">
+                            <a href="/emag-apps-ui-kit/demo/js_components.html#js-utilities">
                                 <span class="menu-text">Utilities</span>
                             </a>
                         </li>
