Refactor(Sidebar): Create init function for sidebar menu

--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -279,7 +279,7 @@
                             </a>
                         </li>
                         <li class="menu-item menu-item-has-children">
-                            <a href="/emag-apps-ui-kit/demo/js_complex_form_elements.html">
+                            <a href="#">
                                 <span class="menu-text">Complex form elements</span>
                             </a>
                             <ul class="sidebar-submenu">
